# hello-rust

./: .editorconfig  Cargo.toml  Readme.md
.github/: dependabot.yml
.github/workflows/: rust.yml  static.yml
projects/build_by_cli/: Cargo.toml  Yggdrasil.json5
projects/build_by_cli/src/: lib.rs
projects/build_by_dep/: Cargo.toml  build.rs  readme.md
projects/build_by_dep/grammars/: json5.ygg
projects/build_by_dep/src/: lib.rs
projects/build_by_dep/src/json5/: debug.ron  mod.rs  parse_ast.rs  parse_cst.rs  readme.md
projects/build_by_dep/tests/: main.rs
projects/build_by_script/: Cargo.toml
