[package]
name = "build_by_cli"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Command line build example"
homepage = "https://github.com/ygg-lang/yggdrasil-rs"
repository = "https://github.com/ygg-lang/yggdrasil-template/tree/master/projects/build_by_cli"
documentation = "https://ygg-lang.github.io/yggdrasil-template/build_by_script/struct.Json5Language.html"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
yggdrasil-rt = "0.0.6"

[dev-dependencies]

[features]
default = []
