[package]
name = "build_by_script"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
yggdrasil-rt = "0.0.5"

[dev-dependencies]

[build-dependencies.yggdrasil-shared]
version = "0.2.3"
path = 'C:\Users\Dell\CLionProjects\yggdrasil-rs\projects\ygg-core'
#git = "https://github.com/ygg-lang/yggdrasil-rs"
#branch = "dev"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
