[package]
name = "build_by_script"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Rust script build example"
homepage = "https://github.com/ygg-lang/yggdrasil-rs"
repository = "https://github.com/ygg-lang/yggdrasil-template/tree/master/projects/build_by_dep"
documentation = "https://ygg-lang.github.io/yggdrasil-template/build_by_script/struct.Json5Language.html"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]

[dependencies.yggdrasil-rt]
version = "0.0.8"
#path = 'C:\Users\Dell\CLionProjects\yggdrasil-rs\projects\ygg-rt'

[dev-dependencies]

[build-dependencies.yggdrasil-shared]
version = "0.2.3"
#path = 'C:\Users\Dell\CLionProjects\yggdrasil-rs\projects\ygg-core'
git = "https://github.com/ygg-lang/yggdrasil.rs"
branch = "dev"

[features]
default = []

